Made all changes required for mission 8

--- a/Views/Shared/BookSummary.cshtml
+++ b/Views/Shared/BookSummary.cshtml
@@ -2,8 +2,11 @@
 }
 
 @model Book
+
+<!--THIS IS A PARTIAL CONTEXT-->
+
 <div class="card card-outline-primary m-1 p-1">
-    <div class="bg-faded p-1">
+    <div class="bg-light p-1">
         <h4>
             @Model.Title
             <span class="badge badge-pill badge-primary" style="float:right">
@@ -11,9 +14,21 @@
             </span>
         </h4>
     </div>
+
+
     <div class="card-text p-1"><b>Author:</b> @Model.Author</div>
     <div class="card-text p-1"><b>Classification:</b> @Model.Classification</div>
     <div class="card-text p-1"><b>Category:</b> @Model.Category</div>
     <div class="card-text p-1"><b>Pages:</b> @Model.PageCount</div>
     <div class="card-text p-1"><b>ISBN:</b> @Model.Isbn</div>
+
+    <form method="post" asp-page="/ShopBooks">
+
+        <input type="hidden" asp-for="@Model.BookId"/>
+        <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQuery()" />
+
+        <span class="card-text">
+            <button type="submit" class="btn btn-success btn-sm float-right">Buy Now!</button>
+        </span>
+    </form>
 </div>
