--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     </div>
     <div class="row m-1 p-1">
         <div id="categories" class="col-3">
-            Welcome to Bookstore Central! Feel free to browse our list of books to the right:
+            <vc:categories></vc:categories>
         </div>
         <div class="col-9">
             @RenderBody()
