--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,11 +4,21 @@
     <meta name="viewport" content="width=device-width" />
     <title>Mission7</title>
     <link href="/lib/twitter-bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/lib/font-awesome/css/all.min.css" rel="stylesheet" />
 </head>
 <body>
+
     <div class="bg-dark text-white p-2">
-        <span class="navbar-brand ml-2">Bookstore Central</span>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col navbar-brand">Bookstore Central</div>
+                <div class="col-6 text-right">
+                    <vc:basket-summary />
+                </div>
+            </div>
+        </div>
     </div>
+
     <div class="row m-1 p-1">
         <div id="categories" class="col-3">
             <vc:categories></vc:categories>
