--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,6 +22,16 @@
     <div class="row m-1 p-1">
         <div id="categories" class="col-3">
             <vc:categories></vc:categories>
+            <br />
+
+            <!--NEW BOOTSTRAP HERE-->
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <strong>Holy guacamole!</strong> There sure are a lot of categories to choose from! Enjoy!
+            </div>
+
         </div>
         <div class="col-9">
             @RenderBody()
